[package]
name = "devand-core"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maplit = "1"
strum = "0.17"
strum_macros = "0.17"
chrono = { version = "0.4", features = ["serde"] }
