[package]
name = "devand-core"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
maplit = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.17"
strum_macros = "0.17"
uuid = { version = ">=0.2.0, <0.7.0", features = ["v4", "serde"] }
