[package]
name = "devand-db"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
devand-core = { path = "../devand-core" }
diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
rust-argon2 = "0.8"
rand = "0.7"
serde_json = "1"
chrono = "0.4"

[features]
postgres = []
mock = []
