[package]
name = "devand-db"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
chrono = "0.4"
devand-core = { path = "../devand-core" }
diesel = { version = "1", features = ["postgres", "serde_json", "chrono", "uuid"] }
diesel_migrations = "1"
dotenv = "0.15"
log = "0.4"
rand = "0.7"
rust-argon2 = "0.8"
serde_json = "1"
uuid = { version = "*", features = ["v4"] }

[features]
postgres = []
mock = []
