[package]
name = "devand-mailer"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
devand-db = { path = "../devand-db" }
devand-crypto = { path = "../devand-crypto" }
env_logger = "0.7"
log = "0.4"
jsonrpc-derive = "14"
jsonrpc-core = "14"
jsonrpc-http-server = { version = "14", optional = true }
jsonrpc-core-client = { version = "14", features = ["http"], optional = true }
tokio = { version = "0.1", optional = true }
lettre = "0.9"
lettre_email = "0.9"
dotenv = "0.15"
comrak = "0.7"

[features]
server = ["jsonrpc-http-server"]
client = ["jsonrpc-core-client", "tokio"]
mock = []

[[example]]
name = "client"
required-features = ["client"]

[[bin]]
name = "devand-mailer"
required-features = ["server"]
