[package]
name = "devand-ui"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
http = "0.2"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_json = "1"
serde_derive = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
devand-core = { path = "../devand-core" }
maplit = "1"
anyhow = "1"
gloo = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.yew]
git = "https://github.com/yewstack/yew.git"
tag = "0.16.2"

[dependencies.yew-router]
git = "https://github.com/yewstack/yew.git"
tag = "0.16.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'RequestMode',
  'EventTarget',
  'BeforeUnloadEvent',
]

[profile.release]
lto = true
opt-level = 's'

[features]
default = []
mock_http = []
