[package]
name = "devand-web"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"

[dependencies]
# Note: using a forked (and mantained) captch crate, because it fixes https://rustsec.org/advisories/RUSTSEC-2019-0014.html
captcha = { git = "https://github.com/robatipoor/captcha", rev = "8c8f9d2" }
chrono = { version = "0.4", features = ["serde"] }
devand-core = { path = "../devand-core" }
devand-crypto = { path = "../devand-crypto" }
devand-db = { path = "../devand-db" }
devand-mailer = { path = "../devand-mailer", features = ["client"] }
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
serde = "1"
serde_json = "1"
time = "0.1"
validator = "0.10"
validator_derive = "0.10"
uuid = { version = ">=0.2.0, <0.7.0", features = ["v4", "serde"] }

[dependencies.rocket]
version = "0.4"
features = [
  "private-cookies"
]

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [
  "handlebars_templates",
  "serve",
  "json",
  "diesel_postgres_pool"
]
